[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/tres/tile.tres" type="Texture" id=1]
[ext_resource path="res://red/red.gd" type="Script" id=2]
[ext_resource path="res://effects/jump_dust.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/land_dust.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/land.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/walk.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/crouch.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/crouch_out.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/stomp.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 1.875 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.75, 1.125 ), Vector2( 1, 2.125 ), Vector2( 1, 2.125 ), Vector2( 1.25, 1.875 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_idle_animation"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 1.875 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.19209e-07, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "left_hit"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.625, 1.875 ), Vector2( 1.375, 1.875 ), Vector2( 1.375, 1.875 ), Vector2( 1.25, 1.875 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.5, 0 ), Vector2( 0.5, 0 ), Vector2( 0.5, 0 ), Vector2( 1.49012e-07, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "right_hit"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.625, 1.875 ), Vector2( 1.375, 1.875 ), Vector2( 1.375, 1.875 ), Vector2( 1.25, 1.875 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, 0 ), Vector2( -0.500001, 0 ), Vector2( -0.500001, 0 ), Vector2( 1.49012e-07, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 1.875 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "in"
length = 0.233333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.233333 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1.75, 0.875 ), Vector2( 1.25, 1.375 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "out"
length = 0.233333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.233333 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 2.125 ), Vector2( 1.25, 1.875 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.233333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_idle_animation"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.25, 1.875 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "default"
length = 0.933333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.466667 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1.25, 1.875 ), Vector2( 1.25, 1.75 ) ]
}

[node name="red" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -7.0 ]
}
jump_dust_scene = ExtResource( 3 )
land_dust_scene = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="."]
unique_name_in_owner = true
modulate = Color( 0.67451, 0.227451, 0.219608, 1 )
position = Vector2( -1.19209e-07, 0 )
scale = Vector2( 1.25, 1.875 )
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )

[node name="collider" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
modulate = Color( 0.0784314, 1, 0.0980392, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="sprite_land_animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="sprite_wall_animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 4 )
anims/left_hit = SubResource( 6 )
anims/right_hit = SubResource( 5 )

[node name="sprite_crouch_animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 8 )
anims/in = SubResource( 7 )
anims/out = SubResource( 9 )

[node name="sprite_idle_animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 10 )
anims/default = SubResource( 11 )

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 5 )

[node name="land_sfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 6 )

[node name="walk_sfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 7 )

[node name="crouch_sfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 8 )

[node name="crouch_out_sfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 9 )

[node name="stomp_sfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 10 )

[node name="remote_transform_2d" type="RemoteTransform2D" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -7 )
